Set the maven compiler plugin release config to version 8. Replace usages of Class.newInstance(), which is deprecated in Java 9.